--- a/shanbei.html
+++ b/shanbei.html
@@ -301,21 +301,21 @@ ga('send', 'pageview');</script><style>body {
             </a><a class="day-item">
                 <span data-date="2019-12-23"class="checked">23</span>
             </a><a class="day-item">
-                <span data-date="2019-12-24"class="today">24</span>
+                <span data-date="2019-12-24"class="checked">24</span>
             </a><a class="day-item">
                 <span data-date="2019-12-25"class="">25</span>
             </a><a class="day-item">
-                <span data-date="2019-12-26"class="">26</span>
+                <span data-date="2019-12-26"class="checked">26</span>
             </a><a class="day-item">
-                <span data-date="2019-12-27">27</span>
+                <span data-date="2019-12-27"class="checked">27</span>
             </a><a class="day-item">
-                <span data-date="2019-12-28">28</span>
+                <span data-date="2019-12-28"class="checked">28</span>
             </a><a class="day-item">
-                <span data-date="2019-12-29">29</span>
+                <span data-date="2019-12-29"class="checked">29</span>
             </a><a class="day-item">
-                <span data-date="2019-12-30">30</span>
+                <span data-date="2019-12-30"class="checked">30</span>
             </a><a class="day-item">
-                <span data-date="2019-12-31">31</span>
+                <span data-date="2019-12-31"class="today">31</span>
             </a></div>
 		<h3 class="month-title"><span>2020年01月</span></h3><div class="month-body clearfix" data-month="2020-01" loaded="true"><span class="day-item">&nbsp;</span><span class="day-item">&nbsp;</span><span class="day-item">&nbsp;</span><a class="day-item">
 			<span data-date="2020-01-01">1</span>
