--- a/shanbei.html
+++ b/shanbei.html
@@ -9,7 +9,7 @@ ga('send', 'pageview');</script><style>body {
     padding-bottom: constant(safe-area-inset-bottom);
     padding-bottom: env(safe-area-inset-bottom);
 }</style><link rel="stylesheet" href="https://assets.baydn.com/baydn/public/bay-components/0.3.1/dist/bay-components.min.css"><link rel="stylesheet" href="https://assets.baydn.com/baydn/public/shanbay/iconbay/0.1.28/dist/iconbay.css"><link rel="stylesheet" href="https://assets.baydn.com/baydn/public/shanbay/xbay/1.11.5/dist/mobile-ui.css"><link rel="stylesheet" href="https://assets.baydn.com/baydn/public/weui/1.1.0/style/weui.min.css"><link rel="stylesheet" href="a.css"></head><body class="web-body"><div class="share-logo hide"><img src="https://assets0.baydn.com/baydn/public/images/logo-l.png"></div><div class="page-calendar"><div class="header"><div class="checkin-content" data-user-id="null"><div class="checkin-block">
-<span class="checkin-date">50</span><span class="text-day">天</span></div><p><a class="achievement" href="/web/checkin/achievement?user_id=dpswca">查看我的成就 ></a></p></div><div class="weekday-bar clearfix"><div>SUN</div><div>MON</div><div>TUE</div><div>WED</div><div>THU</div><div>FRI</div><div>SAT</div></div></div><div class="content">
+<span class="checkin-date">54</span><span class="text-day">天</span></div><p><a class="achievement" href="/web/checkin/achievement?user_id=dpswca">查看我的成就 ></a></p></div><div class="weekday-bar clearfix"><div>SUN</div><div>MON</div><div>TUE</div><div>WED</div><div>THU</div><div>FRI</div><div>SAT</div></div></div><div class="content">
 		<h3 class="month-title"><span>2020年01月</span></h3><div class="month-body clearfix" data-month="2020-01" loaded="true"><span class="day-item">&nbsp;</span><span class="day-item">&nbsp;</span><span class="day-item">&nbsp;</span><a class="day-item">
                 <span data-date="2020-01-01">1</span>
             </a><a class="day-item">
@@ -253,17 +253,17 @@ ga('send', 'pageview');</script><style>body {
             </a><a class="day-item">
                 <span data-date="2020-04-30">30</span>
             </a></div><h3 class="month-title"><span>2020年05月</span></h3><div class="month-body clearfix" data-month="2020-05" loaded="true"><span class="day-item">&nbsp;</span><span class="day-item">&nbsp;</span><span class="day-item">&nbsp;</span><span class="day-item">&nbsp;</span><span class="day-item">&nbsp;</span><a class="day-item">
-                <span data-date="2020-05-01">1</span>
+                <span data-date="2020-05-01"class="checked">1</span>
             </a><a class="day-item">
-                <span data-date="2020-05-02">2</span>
+                <span data-date="2020-05-02"class="checked">2</span>
             </a><a class="day-item">
-                <span data-date="2020-05-03">3</span>
+                <span data-date="2020-05-03"class="checked">3</span>
             </a><a class="day-item">
-                <span data-date="2020-05-04">4</span>
+                <span data-date="2020-05-04"class="checked">4</span>
             </a><a class="day-item">
-                <span data-date="2020-05-05">5</span>
+                <span data-date="2020-05-05"class="checked">5</span>
             </a><a class="day-item">
-                <span data-date="2020-05-06">6</span>
+                <span data-date="2020-05-06"class="checked">6</span>
             </a><a class="day-item">
                 <span data-date="2020-05-07" class="checked">7</span>
             </a><a class="day-item">
